--- a/source/Example.MvcApplication/Web.config
+++ b/source/Example.MvcApplication/Web.config
@@ -5,6 +5,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Example.MvcApplication.Antix.Html.HtmlSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -42,4 +47,17 @@
            type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <applicationSettings>
+    <Example.MvcApplication.Antix.Html.HtmlSettings>
+      <setting name="HtmlAttributeQuote" serializeAs="String">
+        <value>a</value>
+      </setting>
+      <setting name="HtmlNonContainers" serializeAs="String">
+        <value>br,hr,meta,link,img,video,audio,param,col</value>
+      </setting>
+      <setting name="HtmlInlineElements" serializeAs="String">
+        <value>em,strong,q,cite,dfn,i,b,sup,sub,small,code,mark,del,s,ins,abbr,span,br</value>
+      </setting>
+    </Example.MvcApplication.Antix.Html.HtmlSettings>
+  </applicationSettings>
 </configuration>
