--- a/source/Antix.Html/HtmlSettings.settings
+++ b/source/Antix.Html/HtmlSettings.settings
@@ -1,5 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Antix.Html" GeneratedClassName="HtmlSettings">
+
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
+              GeneratedClassNamespace="Antix.Html" GeneratedClassName="HtmlSettings">
   <Profiles />
   <Settings>
     <Setting Name="HtmlAttributeQuote" Type="System.String" Scope="Application">
