--- a/source/Antix.Drawing/Antix.Drawing.csproj
+++ b/source/Antix.Drawing/Antix.Drawing.csproj
@@ -4,15 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B613687-AD80-4228-AD95-F92B117EF311}</ProjectGuid>
+    <ProjectGuid>{7106F36D-65FB-473A-A4E7-80F5FFDCC016}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Antix.Tests</RootNamespace>
-    <AssemblyName>Antix.Tests</AssemblyName>
+    <RootNamespace>Antix.Drawing</RootNamespace>
+    <AssemblyName>Antix.Drawing</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,36 +38,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="xunit">
-      <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
-    </Reference>
-    <Reference Include="xunit.extensions">
-      <HintPath>..\packages\xunit.extensions.1.9.1\lib\net20\xunit.extensions.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drawing\FitTest.cs" />
-    <Compile Include="Html\HtmlDataTryConsumeToTest.cs" />
-    <Compile Include="Html\ParseAttributeTests.cs" />
-    <Compile Include="Html\ParseElementTest.cs" />
-    <Compile Include="Html\TextTest.cs" />
+    <Compile Include="DrawingExtensions.cs" />
+    <Compile Include="ImageTransformOptions.cs" />
+    <Compile Include="JpegImageTranformOptions.cs" />
+    <Compile Include="PngImageTranformOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Antix.Drawing\Antix.Drawing.csproj">
-      <Project>{7106F36D-65FB-473A-A4E7-80F5FFDCC016}</Project>
-      <Name>Antix.Drawing</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Antix.Html\Antix.Html.csproj">
-      <Project>{4F3C8CC9-B7EA-4506-8DF8-A1EEA81556DF}</Project>
-      <Name>Antix.Html</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
