new file added to nuspec

--- a/source/Antix/Antix.code.nuspec
+++ b/source/Antix/Antix.code.nuspec
@@ -18,5 +18,6 @@
     <!--<file src="**\*.cs" target="content\Antix" exclude="bin\*.cs;obj\*.cs;**\AssemblyInfo.cs" />-->
     <!--<file src="**" target="content\Antix" exclude="**\*.dll;**\*.designer.cs;**\*.csproj;**\*.pdb;**\*.user;**\*.vspscc;bin\*.cs;bin\*.aspx;bin\*.config;bin\*.asax;bin\*.pubxml" />-->
     <file src="StringExtensions.cs" target="content\Antix" />
+    <file src="IO\IOExtensions.cs" target="content\Antix\IO" />
   </files>
 </package>
