--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -53,6 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Keywords\KeywordManagerTests.cs" />
+    <Compile Include="Data\Keywords\KeywordsBuilderTest.cs" />
     <Compile Include="Drawing\FitTest.cs" />
     <Compile Include="Html\HtmlDataTryConsumeToTest.cs" />
     <Compile Include="Html\ParseAttributeTests.cs" />
@@ -66,6 +68,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Antix.Data.Keywords\Antix.Data.Keywords.csproj">
+      <Project>{1DED5C8F-85D6-4B11-8E51-FB5D8F984550}</Project>
+      <Name>Antix.Data.Keywords</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Antix.Drawing\Antix.Drawing.csproj">
       <Project>{7106F36D-65FB-473A-A4E7-80F5FFDCC016}</Project>
       <Name>Antix.Drawing</Name>
@@ -83,6 +89,7 @@
       <Name>Antix</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
