--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -53,7 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\Keywords\KeywordManagerTests.cs" />
+    <Compile Include="Data\Keywords\KeywordIndexerTests.cs" />
     <Compile Include="Data\Keywords\KeywordsBuilderTest.cs" />
     <Compile Include="Drawing\FitTest.cs" />
     <Compile Include="Html\HtmlDataTryConsumeToTest.cs" />
