--- a/source/Example.MvcApplication/packages.config
+++ b/source/Example.MvcApplication/packages.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
+  <package id="Antix.code" version="5.0.0-b04" targetFramework="net45" />
+  <package id="Antix.Data.Keywords.code" version="5.0.0-b04" targetFramework="net45" />
+  <package id="Antix.Data.Keywords.EF.code" version="5.0.0-b04" targetFramework="net45" />
+  <package id="Antix.Drawing.code" version="5.0.0-b04" targetFramework="net45" />
+  <package id="Antix.Html.code" version="5.0.0-b04" targetFramework="net45" />
+  <package id="Antix.Web.code" version="5.0.0-b04" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
@@ -10,6 +18,9 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Unity" version="2.1.505.2" targetFramework="net45" />
+  <package id="Unity.Mvc4" version="1.1.0.0" targetFramework="net45" />
 </packages>
