--- a/source/Antix/Antix.csproj
+++ b/source/Antix/Antix.csproj
@@ -41,6 +41,9 @@
   <ItemGroup>
     <Compile Include="IO\IOExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\ISessionService.cs" />
+    <Compile Include="Security\Session.cs" />
+    <Compile Include="Security\SessionUser.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
