--- a/source/Example.MvcApplication/Example.MvcApplication.csproj
+++ b/source/Example.MvcApplication/Example.MvcApplication.csproj
@@ -52,14 +52,13 @@
       <HintPath>..\packages\EntityFramework.SqlServerCompact.6.0.0-alpha3\lib\net40\EntityFramework.SqlServerCompact.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Practices.ServiceLocation">
-      <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    <Reference Include="Microsoft.Practices.Unity, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Unity.3.0.1304.0\lib\Net45\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.Unity">
-      <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration">
-      <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Unity.3.0.1304.0\lib\Net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -183,9 +182,13 @@
     <Compile Include="Antix\Web\Caching\FileSystemOutputCacheStorage.cs" />
     <Compile Include="Antix\Web\Caching\IOutputCacheStorage.cs" />
     <Compile Include="Antix\Web\Caching\PersistentOutputCacheProvider.cs" />
+    <Compile Include="App_Start\Data\BlogEntryRedirect.cs" />
     <Compile Include="App_Start\KeywordsConfig.cs" />
+    <Compile Include="App_Start\Stemming\LocalEnglishStemmer.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\BlogController.cs" />
+    <Compile Include="Models\BlogEntryInfoModel.cs" />
+    <Compile Include="Models\BlogEntryModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -194,7 +197,10 @@
     <Compile Include="App_Start\Data\DataContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BlogIndexModel.cs" />
+    <Compile Include="Models\DateTimeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BlogReadService.cs" />
+    <Compile Include="Services\IBlogReadService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -215,6 +221,7 @@
       <LastGenOutput>HtmlSettings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Antix.Html</CustomToolNamespace>
     </Content>
+    <Content Include="Views\Blog\Read.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -270,7 +277,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>49894</DevelopmentServerPort>
+          <DevelopmentServerPort>57906</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:49881/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
