--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -61,7 +61,8 @@
     <Compile Include="Html\ParseAttributeTests.cs" />
     <Compile Include="Html\ParseElementTest.cs" />
     <Compile Include="Html\TextTest.cs" />
-    <Compile Include="Security\Users\SessionServiceTest.cs" />
+    <Compile Include="Security\Users\SessionServiceLoginTest.cs" />
+    <Compile Include="Security\Users\SessionServiceLogoutTest.cs" />
     <Compile Include="ToSafeFileNameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\PersistentOutputCacheTests.cs" />
