--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -61,8 +61,8 @@
     <Compile Include="Html\ParseAttributeTests.cs" />
     <Compile Include="Html\ParseElementTest.cs" />
     <Compile Include="Html\TextTest.cs" />
-    <Compile Include="Security\Users\SessionServiceLoginTest.cs" />
-    <Compile Include="Security\Users\SessionServiceLogoutTest.cs" />
+    <Compile Include="Security\Sessions\SessionServiceLoginTest.cs" />
+    <Compile Include="Security\Sessions\SessionServiceLogoutTest.cs" />
     <Compile Include="ToSafeFileNameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\PersistentOutputCacheTests.cs" />
@@ -92,7 +92,9 @@
       <Name>Antix</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Security\Users\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
