--- a/source/Example.MvcApplication/packages.config
+++ b/source/Example.MvcApplication/packages.config
@@ -16,4 +16,5 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.0" targetFramework="net45" />
   <package id="Unity.Mvc4" version="1.1.0.0" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="0.10" targetFramework="net45" />
 </packages>
