--- a/source/Antix/Antix.csproj
+++ b/source/Antix/Antix.csproj
@@ -75,6 +75,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IO\IOExtensions.cs" />
+    <Compile Include="Logging\ILogAdapter.cs" />
+    <Compile Include="Logging\LoggerExtensionsDebug.cs" />
+    <Compile Include="Logging\LoggerExtensionsError.cs" />
+    <Compile Include="Logging\LoggerExtensionsFatal.cs" />
+    <Compile Include="Logging\LoggerExtensionsInformation.cs" />
+    <Compile Include="Logging\LoggerExtensionsWarning.cs" />
+    <Compile Include="Logging\LoggerHelper.cs" />
+    <Compile Include="Logging\LogLevel.cs" />
+    <Compile Include="Logging\LogMessageDelegate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
