--- a/source/Example.MvcApplication/Example.MvcApplication.csproj
+++ b/source/Example.MvcApplication/Example.MvcApplication.csproj
@@ -41,6 +41,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Elmah">
+      <HintPath>..\packages\elmah.corelibrary.1.2.2\lib\Elmah.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.0.0-alpha3\lib\net45\EntityFramework.dll</HintPath>
@@ -143,7 +146,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\Filters\InjectingFilterProvider.cs" />
+    <Compile Include="Api\Extensions.cs" />
+    <Compile Include="Api\Filters\ProxyFilterProvider.cs" />
+    <Compile Include="Api\Filters\IProxyFilterAttribute.cs" />
     <Compile Include="Api\Filters\TokenAuthorizeAttribute.cs" />
     <Compile Include="Api\Filters\TokenAuthorizeFilter.cs" />
     <Compile Include="Api\Models\LoginModel.cs" />
@@ -151,6 +156,7 @@
     <Compile Include="App_Start\Data\UserData.cs" />
     <Compile Include="App_Start\Data\UserSessionData.cs" />
     <Compile Include="App_Start\KeywordsConfig.cs" />
+    <Compile Include="App_Start\Logging\ElmahLogAdapter.cs" />
     <Compile Include="App_Start\Services\SessionDataService.cs" />
     <Compile Include="App_Start\Stemming\LocalEnglishStemmer.cs" />
     <Compile Include="Bootstrapper.cs" />
@@ -176,6 +182,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="App_Readme\Elmah.txt" />
     <Content Include="Global.asax" />
     <Content Include="Unity.WebAPI.README.txt" />
     <Content Include="Web.config" />
