--- a/source/Antix.Html/Antix.Html.csproj
+++ b/source/Antix.Html/Antix.Html.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="HtmlSettings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>HtmlSettings.Designer.cs</LastGenOutput>
