--- a/source/Antix.Html/app.config
+++ b/source/Antix.Html/app.config
@@ -19,6 +19,9 @@
             <setting name="HtmlNonClosers" serializeAs="String">
                 <value>!doctype</value>
             </setting>
+            <setting name="HtmlTextOnlyContainers" serializeAs="String">
+                <value>script</value>
+            </setting>
         </Antix.Html.HtmlSettings>
     </applicationSettings>
 </configuration>
