Added html declaration support
this includes doctype and comments
contents of a declaration tag is a single text element

--- a/source/Antix.Html/app.config
+++ b/source/Antix.Html/app.config
@@ -16,11 +16,11 @@
             <setting name="HtmlInlineElements" serializeAs="String">
                 <value>a,em,strong,q,cite,dfn,i,b,sup,sub,small,code,mark,del,s,ins,abbr,span,br</value>
             </setting>
-            <setting name="HtmlNonClosers" serializeAs="String">
-                <value>!doctype</value>
-            </setting>
             <setting name="HtmlTextOnlyContainers" serializeAs="String">
                 <value>script</value>
+            </setting>
+            <setting name="HtmlDeclarations" serializeAs="String">
+                <value>!doctype,!--|--</value>
             </setting>
         </Antix.Html.HtmlSettings>
     </applicationSettings>
