--- a/source/Antix.Html/HtmlSettings.settings
+++ b/source/Antix.Html/HtmlSettings.settings
@@ -11,11 +11,11 @@
     <Setting Name="HtmlInlineElements" Type="System.String" Scope="Application">
       <Value Profile="(Default)">a,em,strong,q,cite,dfn,i,b,sup,sub,small,code,mark,del,s,ins,abbr,span,br</Value>
     </Setting>
-    <Setting Name="HtmlNonClosers" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">!doctype</Value>
-    </Setting>
     <Setting Name="HtmlTextOnlyContainers" Type="System.String" Scope="Application">
       <Value Profile="(Default)">script</Value>
+    </Setting>
+    <Setting Name="HtmlDeclarations" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">!doctype,!--|--</Value>
     </Setting>
   </Settings>
 </SettingsFile>
