Allow target consumption as optional
required by parser
changed names of TryConsume args to seek and consumeTarget
added test for full parsing

--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Html\HtmlDataTryConsumeToTest.cs" />
     <Compile Include="Html\ParseAttributeTests.cs" />
     <Compile Include="Html\ParseElementTest.cs" />
+    <Compile Include="Html\ParseTest.cs" />
     <Compile Include="Html\TextTest.cs" />
     <Compile Include="Logging\ilogger_tests.cs" />
     <Compile Include="Security\Sessions\SessionServiceLoginTest.cs" />
