Style as text only

--- a/source/Antix.Html/app.config
+++ b/source/Antix.Html/app.config
@@ -21,7 +21,7 @@
         <value>a,em,strong,q,cite,dfn,i,b,sup,sub,small,code,mark,del,s,ins,abbr,span,br</value>
       </setting>
       <setting name="HtmlTextOnlyContainers" serializeAs="String">
-        <value>script</value>
+        <value>script,style</value>
       </setting>
       <setting name="HtmlDeclarations" serializeAs="String">
         <value>!doctype,!--|--</value>
