--- a/source/Antix.Html/HtmlSettings.settings
+++ b/source/Antix.Html/HtmlSettings.settings
@@ -1,7 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
-              GeneratedClassNamespace="Antix.Html" GeneratedClassName="HtmlSettings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Antix.Html" GeneratedClassName="HtmlSettings">
   <Profiles />
   <Settings>
     <Setting Name="HtmlAttributeQuote" Type="System.String" Scope="Application">
@@ -14,7 +12,7 @@
       <Value Profile="(Default)">a,em,strong,q,cite,dfn,i,b,sup,sub,small,code,mark,del,s,ins,abbr,span,br</Value>
     </Setting>
     <Setting Name="HtmlTextOnlyContainers" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">script</Value>
+      <Value Profile="(Default)">script,style</Value>
     </Setting>
     <Setting Name="HtmlDeclarations" Type="System.String" Scope="Application">
       <Value Profile="(Default)">!doctype,!--|--</Value>
